@@ -1,3 +1,8 @@
+2009-01-09  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-allegro.lisp (swank-compile-string): Don't use the
+	no-longer-existing directory argument.
+
 2009-01-08  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el: Move the tree widget for compiler notes to contrib/.
